--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "start": "yarn serve ./dist",
+    "start": "yarn http-server ./dist -g",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "http-server": "^14.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "serve": "^14.2.3"
